--- a/src/app/component/forecast/today-forecast/today-forecast.html
+++ b/src/app/component/forecast/today-forecast/today-forecast.html
@@ -7,6 +7,7 @@
       </div>
       <div class="td-temp">
         <h1>{{ data.temp }}°</h1>
+        <p>Feels like {{ data.feels }}°</p>
         <p>{{ data.desc }}</p>
       </div>
     </div>
