--- a/src/app/component/search/search.html
+++ b/src/app/component/search/search.html
@@ -1,2 +1,7 @@
 <!-- search.html -->
-<input (keyup.enter)="submit(searchInput.value)" #searchInput id="searchInput" />
+<input
+  (keyup.enter)="submit(searchInput.value)"
+  #searchInput
+  id="searchInput"
+  placeholder="Search City"
+/>
