--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-
+// styles.scss
 // Include theming for Angular Material with `mat.theme()`.
 // This Sass mixin will define CSS variables that are used for styling Angular Material
 // components according to the Material 3 design spec.
@@ -7,18 +7,12 @@
 @use '@angular/material' as mat;
 
 *{
-  transition-duration: 800ms;
+  transition-duration: 500ms;
 }
 
 html {
-  @include mat.theme((
-    color: (
-      primary: mat.$magenta-palette,
-      tertiary: mat.$violet-palette,
-    ),
-    typography: Roboto,
-    density: 0,
-  ));
+  display: flex;
+  justify-content: center;
 }
 
 body {
@@ -32,16 +26,13 @@ body {
 }
 /* You can add global styles to this file, and also import other style files */
 
-html, body { 
-  height: 100%;
-}
-
 body { 
-  width: 70%;
+  overflow-x: hidden;
+  width: 100%;
   margin: 0; 
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #2b2b2b;
+  background-color: #464646;
   color: white;
-  padding: 30px;
-  justify-self: center;
+  display: flex;
+  justify-content: center;
 }
